--- a/DAY7-9/nodeadminapp/package.json
+++ b/DAY7-9/nodeadminapp/package.json
@@ -9,12 +9,8 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
-    "ex": "^0.1.4",
     "express": "~4.16.1",
-    "express-ejs-layouts": "^2.5.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "mysql2": "^3.3.1",
-    "sequelize": "^6.31.1"
+    "morgan": "~1.9.1"
   }
 }
