--- a/DAY12/nodeadminapp/config/config.json
+++ b/DAY12/nodeadminapp/config/config.json
@@ -8,15 +8,15 @@
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
+    "password": "dlaudrb96",
+    "database": "mgl_board_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
+    "password": "dlaudrb96",
+    "database": "mgl_board_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
